Add support for [éèàçê] into code blocks

--- a/report/lst_config.tex
+++ b/report/lst_config.tex
@@ -29,3 +29,8 @@
   tabsize=2,                       % sets default tabsize to 2 spaces
   title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
 }
+
+\lstset{literate=
+  {é}{{\'e}}1 {à}{{\`a}}1 {è}{{\`e}}1
+ {â}{{\^a}}1 {ê}{{\^e}}1 {ç}{{\c c}}1
+}
