Wrap Hello Word code into figure

--- a/report/index.tex
+++ b/report/index.tex
@@ -61,13 +61,14 @@ Vala est un langage développé pour le projet Gnome.
 Il vise à être une alternative au C\# et au Java, en proposant une syntaxe puissante pour la programmation orientée objet.
 Il se base sur la librairie GObject et est compilé en C via la commande `valac`.
 % more @ https://wiki.gnome.org/Projects/Vala/About
-\begin{lstlisting} % TODO encadrer
 
+\begin{figure}[h] % TODO réduire l'espacement
+\begin{lstlisting}
 void main () {
     print ("hello, world\n");
 }
-
-\end{lstlisting}\textit{Exemple tiré de wiki.gnome.org/Projects/Vala/BasicSample}
+\end{lstlisting}\caption{"Hello Word" en Vala, tiré de \url{wiki.gnome.org/Projects/Vala/BasicSample}}
+\end{figure}
 
 \section{Compiler LaTeXila}
 \label{cha:compiler}
