Improve text on fig.

--- a/report/draw/doc_opening.tex
+++ b/report/draw/doc_opening.tex
@@ -43,7 +43,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-28.150000\du,6.345000\du){Utilisateur};
+\node at (-28.150000\du,6.045000\du){Utilisateur};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
@@ -178,7 +178,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-16.300000\du,11.400000\du){Envoi des données};
+\node at (-16.800000\du,11.200000\du){Envoi des labels};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
