--- a/report/index.tex
+++ b/report/index.tex
@@ -218,11 +218,11 @@ Les choix proposés sont les labels déclarés dans les documents .tex du même 
 
 \chapter{Conclusion}
 Le mécanisme de complétion, auparavant \textit{statique} prend désormais en charge une complétion \textit{dynamique} sur les labels déclarés par l'utilisateur.
-Cependant, notre solution est notamment criticable sur le point suivant : le filtrage des choix de complétion proposés sur le répertoire parent du document courant.
+Cependant, notre solution est notamment criticable sur le point suivant : le filtrage des choix de complétion proposés, sur le répertoire parent du document courant.
 En effet, certains utilisateurs sont susceptibles d'utiliser des sous-répertoires pour organiser leurs fichiers, et ne bénéficieraient donc pas de la complétion souhaitée.
 De plus, il arrive que certains fichiers .tex ne soient que des anciennes versions de rapports, voire des fichiers de tests. Dans ce cas, notre mécanisme de complétion proposerait les labels déclarés dans ces fichiers, alors qu'ils ne sont pas souhaités.
 
-Nous avons tout de même soumis ce patch au mainteneur du projet, monsieur Wilmet, qui nous as fait part de ses commentaires.
+Nous avons tout de même soumis ce patch au mainteneur du projet, monsieur Wilmet, qui nous a fait part de ses commentaires.
 
 Après discussion avec notre encadrant et monsieur Wilmet, nous avons établi que pour palier à ces problèmes, une refonte de la notion de \textit{projet} comme ils sont organisés dans LaTeXiLa était nécessaire.
 On pourrait ainsi proposer une complétion ne prenant en compte que les fichiers faisant partie du même projet, et éviter les points précédemment soulevés.
