--- a/report/index.tex
+++ b/report/index.tex
@@ -126,7 +126,7 @@ La version 2.2 de LaTeXiLa fournit une complétion exhaustive des éléments sta
 Cette complétion est donc dite \textit{statique}, car elle ne s'adapte pas au contenu précédemment tapé par l'utilisateur. 
 
 \begin{description}
-  \item[Fonction] de la forme \\\textit{fonction}\{argument\}, défini par \LaTeX
+  \item[Fonction] de la forme \textbackslash\textit{fonction}\{argument\}, défini par \LaTeX
   \item[Argument] peut être définit par \LaTeX  ou tiré de l'environnement utilisateur
 \end{description}
 
