--- a/report/index.tex
+++ b/report/index.tex
@@ -32,12 +32,18 @@
 \tableofcontents %table des matières
 \newpage
 
-\section*{Remerciements} % (fold)
+\clearpage
+\vspace*{\fill}
+
+\section*{\centerline{Remerciements}} % (fold)
 \begin{center}
 \label{sec:remerciements}
 Nous remercions Arnaud Blouin, notre encadrant, pour sa disponibilité et ses conseils, ainsi que Sébastien Wilmet, développeur et mainteneur de LaTeXila.
 \end{center}
-\vspace{\fill}
+
+\vfill
+\clearpage
+
 
 \chapter*{Introduction}
 \label{cha:Introduction}
